Update link to courses.html in About us.html
Change in the code

--- a/About us.html
+++ b/About us.html
@@ -109,7 +109,7 @@
   <div id="menu">
     <a href="index.html">HOME</a>
     <a href="About us.html">ABOUT US</a>
-    <a href="Courses.html">COURSES</a>
+    <a href="courses.html">COURSES</a>
     <a href="signup.html">SIGN UP</a>
     <a href="register.html">REGISTER</a>
   </div>
