--- a/About us.html
+++ b/About us.html
@@ -132,7 +132,7 @@
     <ul>
       <li>Only students who have completed Intermediate are eligible for admission.</li>
       <li>Applications can be submitted online<a href="https://dost.cgg.gov.in
-DOST">DOST</a> or offline at the college.</li>
+">DOST</a> or offline at the college.</li>
       <li>Required Documents:
         <ul>
           <li>SSC Marks Memo & Intermediate TC</li>
