Update link to courses.html in About us.html

--- a/About us.html
+++ b/About us.html
@@ -131,8 +131,7 @@
     <h4>Please follow the rules and guidelines below to apply for admission:</h4>
     <ul>
       <li>Only students who have completed Intermediate are eligible for admission.</li>
-      <li>Applications can be submitted online<a href="https://dost.cgg.gov.in
-">DOST</a> or offline at the college.</li>
+      <li>Applications can be submitted online<a href="https://dost.cgg.gov.in">DOST</a> or offline at the college.</li>
       <li>Required Documents:
         <ul>
           <li>SSC Marks Memo & Intermediate TC</li>
@@ -142,7 +141,7 @@
         </ul>
       </li>
       <li>To apply online, click the link below:<br>
-        <a href="rigester.html">ADMISSION NOW</a>
+        <a href="register.html">ADMISSION NOW</a>
       </li>
       <li>Fill the admission form carefully. An OTP will be sent to your mobile number or email for verification.</li>
       <li>Read all details carefully before submitting the admission form.</li>
