--- a/About us.html
+++ b/About us.html
@@ -131,7 +131,7 @@
     <h4>Please follow the rules and guidelines below to apply for admission:</h4>
     <ul>
       <li>Only students who have completed Intermediate are eligible for admission.</li>
-      <li>Applications can be submitted online<a href="https://dost.cgg.gov.in">DOST</a> or offline at the college.</li>
+      <li>Applications can be submitted online<a href="https://dost.cgg.gov.indost">DOST</a> or offline at the college.</li>
       <li>Required Documents:
         <ul>
           <li>SSC Marks Memo & Intermediate TC</li>
